--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,8 +12,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/andconlablauncher"
+        android:label="@string/actionbar_label"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.gdg.andconlab.ItemsListActivity"
@@ -26,12 +26,26 @@
         </activity>
         
         <activity
-            android:name="SingleItemPlayerScreen">
+            android:name="SingleItemPlayerScreen" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="SingleItemDetailsScreen" android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
+        </activity>
+        
+        <provider 
+            android:name="ItemsProvider"
+            android:authorities="@string/provider_authority" 
+            android:exported="false">
+            
+        </provider>
     </application>
 
 </manifest>
