--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=../../Users/royi.ben/workspace/ActionBarSherlock-4.04
+android.library.reference.1=../../../Users/royi.ben/workspace/ActionBarSherlock-4.04
