--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,9 +18,8 @@
         android:icon="@drawable/andconlablauncher"
         android:label="@string/actionbar_label"
         android:theme="@style/AppTheme" >
-        
         <activity
-            android:name="com.gdg.andconlab.ui.MainActivity"
+            android:name="com.gdg.andconlab.ui.LecturesListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,12 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity 
-            android:name="com.gdg.andconlab.ui.LecturesList"
-            >
-            
-            
+        <activity
+            android:name="com.gdg.andconlab.ui.EventsListActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity android:name="com.gdg.andconlab.ui.EventLecturesList" >
         </activity>
         <activity
             android:name="com.gdg.andconlab.ItemsListActivity"
@@ -52,7 +50,7 @@
             
         </provider>
         -->
-        
+
     </application>
 
 </manifest>
