--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/jackson-all-1.9.6.jar"/>
+	<classpathentry kind="lib" path="libs/FlowTextView_1.0.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
