--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,6 +50,7 @@
             
         </provider>
         -->
+        <service android:name="CommunicationService"></service>
 
     </application>
 
