--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/actionbar_label"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.gdg.andconlab.ui.LecturesListActivity"
+            android:name="com.gdg.andconlab.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
