--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,10 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name="com.gdg.andconlab.ui.YoutubePlayerActivity"
+            android:label="@string/app_name" >
+        </activity>
         <!--
         <provider 
             android:name="ItemsProvider"
