--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,57 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.gdg.andconlab"
-    android:versionCode="1"
-    android:versionName="1.1" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.gdg.andconlab"
+          android:versionCode="1"
+          android:versionName="1.1">
 
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="17"
-        tools:ignore="OldTargetApi" />
+        tools:ignore="OldTargetApi"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
+        android:name=".App"
         android:icon="@drawable/andconlablauncher"
-        android:label="@string/actionbar_label"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
+
         <activity
             android:name="com.gdg.andconlab.ui.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.gdg.andconlab.ui.EventsListActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity android:name="com.gdg.andconlab.ui.EventLecturesList" >
-        </activity>
-        <activity
-            android:name="com.gdg.andconlab.ItemsListActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name="com.gdg.andconlab.ui.SingleLectureActivity"
-            android:label="@string/app_name" >
-        </activity>
+        <activity android:name="com.gdg.andconlab.ui.EventsListActivity"/>
+        <activity android:name="com.gdg.andconlab.ui.EventLecturesList"/>
+        <activity android:name="com.gdg.andconlab.ui.SingleLectureActivity"/>
 
-        <!--
-        <provider 
-            android:name="ItemsProvider"
-            android:authorities="@string/provider_authority" 
-            android:exported="false">
-            
-        </provider>
-        -->
-        <service android:name="CommunicationService"></service>
-
+        <service android:name="CommunicationService"/>
     </application>
 
 </manifest>
